--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,5 +23,6 @@
       <span>mi-app</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <app-alumno-item></app-alumno-item>
   </mat-sidenav-content>
 </mat-sidenav-container>
